--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -1,17 +1,16 @@
-
 name: Test
 on: 
   push:
     branches:
-      - '!master'
+      - master
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ '10', '8' ]
-    name: Node ${{ matrix.node }} test
+        node: [ '10']
+    name: Node test and publish
     steps:
       - uses: actions/checkout@v1
       - name: Setup node
@@ -22,3 +21,10 @@ jobs:
         run: yarn install
       - name: Run test
         run: yarn test
+      - name: npm publish
+        run: |
+          npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
+          npm run trypublish
+        env:
+          CI: true
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
