--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "author": "KeisukeYamashita <19yamashita15@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.2.4",
     "@types/jest": "^24.0.20",
     "@types/mocha": "^5.2.7",
+    "chai": "^4.2.0",
     "jest": "^24.9.0",
+    "mocha": "^6.2.2",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.4"
