--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "strict": true,
       "esModuleInterop": true,
       "declaration": true,
-      "outDir": "./dist"
+      "outDir": "./dist",
+      "skipLibCheck": true
     }
 }
